# risto

./: .gitignore  Cargo.toml  justfile  readme.md
.github/workflows/: build.yml  release.yml
src/: acoustid.rs  cache.rs  cli.rs  lib.rs  main.rs
src/cli/: classify_music.rs  rename_music_files.rs
